<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ais_nav2_fp_tutorial</name>
  <version>0.0.0</version>
  <description>GPS Waypoints Follower for ais robots with fixposition</description>
  <maintainer email="hans-peter.wipfler@tugraz.at">Hans-Peter Wipfler</maintainer>
  <license>MIT</license>

  <depend>robot_localization</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
